feat: api to get single transaction information with stx transactions
