# docs/openapi.yaml
@@ -1013,6 +1013,26 @@ paths:
               example:
                 $ref: ./api/address/get-address-transactions.example.json
 
+  /extended/v1/address/{principal}/{tx_id}/transactions_with_transfers:
+    get:
+      summary: Get account transaction information for specific transaction
+      tags:
+        - Accounts
+      operationId: get_single_transaction_with_transfers
+      parameters:
+        - name: principal
+          in: path
+          description: Stacks address or a contract identifier
+          required: true
+          schema: 
+            type: string
+        - name: tx_id
+          in: path
+          description: Transaction id
+          required: true
+          schema:
+            type: string
+
   /extended/v1/address/{principal}/transactions_with_transfers:
     get:
       summary: Get account transactions including STX transfers for each transaction.
